# agent-desk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
adapters/: README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: doctor.rs  mod.rs  policy.rs  repair.rs  setup.rs  sync.rs  workspace.rs
crates/agent-desk-core/: Cargo.toml
crates/agent-desk-core/src/: adapter.rs  doctor.rs  lib.rs  presets.rs  profile.rs
crates/agent-desk-core/src/adapters/: hermes.rs  mod.rs  util.rs
crates/agent-doctor-core/src/: doctor.rs  lib.rs  presets.rs  probe.rs  repair.rs
crates/agent-doctor-core/src/adapters/: mod.rs  openclaw.rs  util.rs
crates/agent-doctor-core/src/lifecycle/: hermes.rs  mod.rs  openclaw.rs  runner.rs
crates/agent-doctor-core/src/probe/: mod.rs
crates/agent-doctor-core/src/probe/runtimes/: mod.rs  openclaw.rs
crates/agent-doctor-core/src/repair/: execute.rs  mod.rs  restore.rs  suggested.rs
crates/agent-doctor-core/src/repair/llm/: mod.rs
crates/agent-doctor-core/src/repair/playbooks/: hermes.rs  mod.rs  openclaw.rs
crates/agent-doctor-core/src/repair/tools/: policy.rs
crates/agent-doctor-core/src/runtime/: registry.rs
crates/agent-doctor-core/src/setup/: merge.rs
crates/agent-doctor-core/src/workspace/: backends.rs  backup.rs  fix.rs  gateway.rs  mod.rs  path.rs  shell.rs  snapshot.rs
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: i18n.ts  main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ROADMAP.md  development.md  enterprise.md  evotown.md  install.md  repair-safety.md  workspace.md
docs/examples/: profiles.example.yaml
docs/zh-CN/: README.md
scripts/: check.sh
