[workspace]
resolver = "2"
members = ["crates/agent-desk-core", "cli", "desktop/src-tauri"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Agent Desk Contributors"]

[workspace.dependencies]
agent-desk-core = { path = "crates/agent-desk-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
