[package]
name = "agent-desk"
description = "Manage desktop AI agents — discover, configure, and sync profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "agent-desk"
path = "src/main.rs"

[dependencies]
agent-desk-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
